--- a/TechBayV01/Pages/choose_role/index.cshtml
+++ b/TechBayV01/Pages/choose_role/index.cshtml
@@ -185,9 +185,14 @@
                                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 11V6m0 8h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
                                 </svg>
                                 <h3 class="mb-5 text-lg font-normal text-gray-500 dark:text-gray-400">Tem certeza de que deseja continuar como comprador?</h3>
-                                <button data-modal-hide="popup-modal-comprador" type="button" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
-                                    Sim, continuar
-                                </button>
+                                <form method="post">
+                                    <input type="hidden" id="SelectedRole" name="SelectedRole" value="Comprador"/>
+                                    <button type="submit"
+                                            class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
+                                        Sim, continuar
+                                    </button>
+                                </form>
+
                                 <button data-modal-hide="popup-modal-comprador" type="button" class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">Não, cancelar</button>
                             </div>
                         </div>
@@ -210,6 +215,7 @@
         </div>
     </div>
 
+
     <script>
         function selectRole(role) {
             // Atualiza a mensagem
@@ -219,7 +225,7 @@
             roleSpan.textContent = role;
             messageDiv.classList.remove('hidden');
 
-            // Aqui você pode adicionar a lógica de redirecionamento
+            // Aqui pode adicionar a lógica de redirecionamento
             console.log('Usuário selecionou:', role);
 
             // Exemplo de redirecionamento após 1 segundo:
