--- a/TechBayV01/Pages/Shared/_LayoutVendedor.cshtml
+++ b/TechBayV01/Pages/Shared/_LayoutVendedor.cshtml
@@ -21,6 +21,7 @@
                 <div class="w-24 h-24 bg-gradient-to-br from-[#55B3D9] to-[#118EBF] rounded-2xl flex items-center justify-center shadow-lg mb-2">
                     <div class="w-12 h-12 bg-white rounded-full flex items-center justify-center">
                         <div class="w-7 h-7 bg-gradient-to-br from-green-400 to-green-600 rounded-full"></div>
+                        <img src="~/img/logo_transparent_background.png" alt="TechBay Logo" class="w-8 h-8 absolute" />
                     </div>
                 </div>
                 <span class="text-sm font-semibold">TechBay</span>
