--- a/TechBayV01/Pages/choose_role/index.cshtml
+++ b/TechBayV01/Pages/choose_role/index.cshtml
@@ -147,7 +147,7 @@
                     </div>
                 </button>
 
-                <!--Modal de confirmação comprador -->
+                <!--Modal de confirmação vendedor -->
                 <div id="popup-modal-vendedor" tabindex="-1" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
                     <div class="relative p-4 w-full max-w-md max-h-full">
                         <div class="relative bg-white rounded-lg shadow-sm dark:bg-gray-700">
@@ -162,15 +162,26 @@
                                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 11V6m0 8h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
                                 </svg>
                                 <h3 class="mb-5 text-lg font-normal text-gray-500 dark:text-gray-400">Tem certeza de que deseja continuar como vendedor?</h3>
-                                <button data-modal-hide="popup-modal-vendedor" type="button" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
+                                <!--<button data-modal-hide="popup-modal-vendedor" type="button" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
                                     Sim, continuar
-                                </button>
+                                </button> -->
+
+                                <form method="post">
+                                    <input type="hidden" id="SelectedRole" name="SelectedRole" value="Vendedor" />
+                                    <button type="submit"
+                                            class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
+                                        Sim, continuar
+                                    </button>
+                                </form>
+
+
+
                                 <button data-modal-hide="popup-modal-vendedor" type="button" class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">Não, cancelar</button>
                             </div>
                         </div>
                     </div>
                 </div>
-                <!--Modal de confirmação vendedor -->
+                <!--Modal de confirmação comprador -->
                 <div id="popup-modal-comprador" tabindex="-1" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
                     <div class="relative p-4 w-full max-w-md max-h-full">
                         <div class="relative bg-white rounded-lg shadow-sm dark:bg-gray-700">
