--- a/TechBayV01/Pages/vendedor/Index.cshtml
+++ b/TechBayV01/Pages/vendedor/Index.cshtml
@@ -8,8 +8,8 @@
 <!-- Header -->
 <header class="flex items-center justify-between mb-6">
     <div>
-        <h1 class="text-4xl font-bold text-white mb-1">Gerenciamento de Produtos</h1>
-        <p class="text-[#F2F2F2] text-sm">Adicione, edite e organize seus produtos</p>
+        <h1 class="text-4xl font-bold mb-1">Gerenciamento de Produtos</h1>
+        <p class="text-sm">Adicione, edite e organize seus produtos</p>
     </div>
 
     <div class="flex items-center space-x-4">
