--- a/TechBayV01/Pages/Shared/_LayoutVendedor.cshtml
+++ b/TechBayV01/Pages/Shared/_LayoutVendedor.cshtml
@@ -99,5 +99,7 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
     <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/flowbite@4.0.1/dist/flowbite.min.js"></script>
+
 </body>
 </html>
