--- a/TechBayV01/Pages/vendedor/Index.cshtml
+++ b/TechBayV01/Pages/vendedor/Index.cshtml
@@ -251,7 +251,7 @@
 
                 <!-- Body -->
                 <form method="post" id="productForm" class="p-6 space-y-5">
-                    <!-- <div asp-validation-summary="ModelOnly" class="alert alert-danger" role="alert"></div> aqui eu posso usar para trazer mensagens de erro do data annotations, como número de caracteres inválidos--> 
+                    <div asp-validation-summary="ModelOnly" class="alert alert-danger" role="alert"></div> <!-- aqui eu posso usar para trazer mensagens de erro do data annotations, como número de caracteres inválidos-->
 
                     <!-- Upload de Imagem -->
                     <div>
@@ -273,16 +273,13 @@
                         </div>
                     </div>
 
+                   
+
                     <!-- Nome do Produto -->
                     <div>
-                        <label for="productName" class="block text-sm font-semibold text-gray-700 mb-2">
-                            Nome do Produto
-                        </label>
-                        <input type="text"
-                               id="productName"
-                               placeholder="Ex: iPhone 15 Pro Max"
-                               class="w-full px-4 py-3 bg-gray-50 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-all duration-200 outline-none"
-                               required>
+                        <label asp-for="Produto.Nome" class="block text-sm font-semibold text-gray-700 mb-2"></label>
+                        <input asp-for="Produto.Nome" class="form-control" placeholder="Ex: iPhone 15 Pro Max" id="productName" class="w-full px-4 py-3 bg-gray-50 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-all duration-200 outline-none" required />
+                        <span asp-validation-for="Produto.Nome" class="text-danger small"></span>
                     </div>
 
                     <!-- Descrição -->
