--- a/TechBayV01/Pages/vendedor/Index.cshtml
+++ b/TechBayV01/Pages/vendedor/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model TechBayV01.Pages.vendedor.IndexModel
 @{
-    ViewData["Title"] = "Area do vendedor";
+    ViewData["Title"] = "Área do vendedor";
     Layout = "_LayoutVendedor";
 }
 
