--- a/TechBayV01/Areas/Identity/Pages/Account/Login.cshtml
+++ b/TechBayV01/Areas/Identity/Pages/Account/Login.cshtml
@@ -15,9 +15,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 </head>
-<body class="min-h-screen bg-gradient-to-br from-indigo-900 via-purple-900 to-pink-800 flex items-center justify-center p-4">
+<body class="min-h-screen  flex items-center justify-center p-4">
 
-    <div class="w-full max-w-md bg-indigo-900/40 backdrop-blur-sm border border-white/20 rounded-3xl p-8 shadow-2xl">
+    <div class="w-full max-w-md bg-blue-900/40 backdrop-blur-sm border border-white/20 rounded-3xl p-8 shadow-2xl">
 
         <!-- Logo -->
         <div class="mb-8 flex justify-center">
@@ -50,7 +50,7 @@
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                     <button type="button"
                             id="togglePassword"
-                            class="absolute right-3 top-1/2 -translate-y-1/2 text-gray-400 hover:text-gray-600">
+                            class="absolute inset-y-0 right-3 flex items-center text-gray-400 hover:text-gray-600">
                         <i class="fa-solid fa-eye" id="eyeIcon"></i>
                     </button>
                 </div>
@@ -63,7 +63,7 @@
 
         <!-- Remember me -->
         <div class="checkbox mb-3">
-            <label asp-for="Input.RememberMe" class="text-white/80 text-sm hover:text-white">
+            <label asp-for="Input.RememberMe" class="text-gray/80 text-sm hover:text-black">
                 <input class="form-check-input" asp-for="Input.RememberMe" />
                 @Html.DisplayNameFor(m => m.Input.RememberMe)
             </label>
